tests/fail/if_then_else_typed_and_not_typed.tig
if 1 then () else 0
